# oxqr

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  dune-project  flake.nix  oxqr-doc.opam  oxqr.opam
.github/workflows/: main.yml
analysis/: plot_performance.py
bench/: README.md  aggregate.py  aggregate_gc.py  aggregate_throughput.py  bench.ml  bench_dist.ml  bench_gc.ml  bench_raw.ml  bench_versions.ml  check-env.sh  collect.sh  collect_throughput_history.sh  dune  p50_parity.py  plot_dist.py  plot_ratio.py  run-all.sh  run-bench-gc.sh  run-bench.sh  setup-isolation.sh  time_ns_raw.c
doc/: build.sh  heap.ml  stack.ml
lib/: bitbuf.ml  bitbuf.mli  buf.ml  buf.mli  config.ml  config.mli  dune  encoding.ml  encoding.mli  qr.ml  qr.mli  reed_solomon.ml  reed_solomon.mli  svg.ml  table.ml  table.mli  xml.ml
test/: dune  test_encoding.ml  test_oxqr.ml  test_qr.ml
web/: README.md  app.js  index.html  style.css
