(executable
 (name bench)
 (libraries oxqr landmarks)
 (flags
  (:standard -w -32)))

; bench_dist and bench_gc share the time_ns C stub, so they live in one
; (executables) stanza — two separate stanzas would each try to build an object
; named "time_ns" and clash.
(executables
 (names bench_dist bench_gc)
 (libraries oxqr)
 (foreign_stubs (language c) (names time_ns))
 (flags
  (:standard -w -32)))

(executable
 (name bench_raw)
 (libraries oxqr)
 (foreign_stubs (language c) (names time_ns_raw))
 (flags
  (:standard -w -32)))
